Make nicer footer

--- a/html/footer.html
+++ b/html/footer.html
@@ -1,5 +1,4 @@
 <div id='footer'>
 <script src="http://api.flattr.com/js/0.5.0/load.js?mode=auto"></script>
-<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://osmstats.hanskalabs.net"></a><br />
-Hosting kindly provided by <a href="http://www.gplhost.com/">GPLHost</a>
+<a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://osmstats.hanskalabs.net"></a>
 </div>
