Use google analytics to track statistics

--- a/html/footer.html
+++ b/html/footer.html
@@ -8,7 +8,17 @@
 <input type="image" src="https://www.paypalobjects.com/WEBSCR-640-20110306-1/it_IT/IT/i/btn/btn_donate_SM.gif" border="0" name="submit" alt="PayPal - Il sistema di pagamento online più facile e sicuro!" />
 <img alt="" border="0" src="https://www.paypalobjects.com/WEBSCR-640-20110306-1/it_IT/i/scr/pixel.gif" width="1" height="1" />
 </form>
+<script type="text/javascript">
+  var _gaq = _gaq || [];
+  _gaq.push(['_setAccount', 'UA-352628-2']);
+  _gaq.push(['_trackPageview']);
 
+  (function() {
+    var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+  })();
+</script>
 <!--
 <script src="http://api.flattr.com/js/0.5.0/load.js?mode=auto"></script>
 <a class="FlattrButton" style="display:none;" rev="flattr;button:compact;" href="http://osmstats.hanskalabs.net"></a>
